--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 25. <a href="https://archive.org/upload/?identifier=ravana-Y" target="_blank" rel="noopener noreferrer">ravana-Y</a></br>
 26. <a href="https://archive.org/upload/?identifier=ravana-Z" target="_blank" rel="noopener noreferrer">ravana-Z</a>
 
-searching: https://archive.org/edit.php?edit-files=1&identifier=ravana-A
+<a href="https://archive.org/edit.php?edit-files=1&identifier=ravana-A" target="_blank" rel="noopener noreferrer">Special</a>
+
 </body>
 </html>
 
