--- a/index.html
+++ b/index.html
@@ -7,35 +7,34 @@
 
 <h1>Archive.org</h1>
 
-1. <a href="https://archive.org/upload/?identifier=ravana-A" target="_blank" rel="noopener noreferrer">ravana-A</a></br>
-2. <a href="https://archive.org/upload/?identifier=ravana-B" target="_blank" rel="noopener noreferrer">ravana-B</a></br>
-3. <a href="https://archive.org/upload/?identifier=ravana-C" target="_blank" rel="noopener noreferrer">ravana-C</a></br>
-4. <a href="https://archive.org/upload/?identifier=ravana-D" target="_blank" rel="noopener noreferrer">ravana-D</a></br>
-5. <a href="https://archive.org/upload/?identifier=ravana-E" target="_blank" rel="noopener noreferrer">ravana-E</a></br>
-6. <a href="https://archive.org/upload/?identifier=ravana-F" target="_blank" rel="noopener noreferrer">ravana-F</a></br>
-7. <a href="https://archive.org/upload/?identifier=ravana-G" target="_blank" rel="noopener noreferrer">ravana-G</a></br>
-8. <a href="https://archive.org/upload/?identifier=ravana-H" target="_blank" rel="noopener noreferrer">ravana-H</a></br>
-9. <a href="https://archive.org/upload/?identifier=ravana-I" target="_blank" rel="noopener noreferrer">ravana-I</a></br>
-10. <a href="https://archive.org/upload/?identifier=ravana-J" target="_blank" rel="noopener noreferrer">ravana-J</a></br>
-11. <a href="https://archive.org/upload/?identifier=ravana-K" target="_blank" rel="noopener noreferrer">ravana-K</a></br>
-12. <a href="https://archive.org/upload/?identifier=ravana-L" target="_blank" rel="noopener noreferrer">ravana-L</a></br>
-13. <a href="https://archive.org/upload/?identifier=ravana-M" target="_blank" rel="noopener noreferrer">ravana-M</a></br>
-14. <a href="https://archive.org/upload/?identifier=ravana-N" target="_blank" rel="noopener noreferrer">ravana-N</a></br>
-15. <a href="https://archive.org/upload/?identifier=ravana-O" target="_blank" rel="noopener noreferrer">ravana-O</a></br>
-16. <a href="https://archive.org/upload/?identifier=ravana-P" target="_blank" rel="noopener noreferrer">ravana-P</a></br>
-17. <a href="https://archive.org/upload/?identifier=ravana-Q" target="_blank" rel="noopener noreferrer">ravana-Q</a></br>
-18. <a href="https://archive.org/upload/?identifier=ravana-R" target="_blank" rel="noopener noreferrer">ravana-R</a></br>
-19. <a href="https://archive.org/upload/?identifier=ravana-S" target="_blank" rel="noopener noreferrer">ravana-S</a></br>
-20. <a href="https://archive.org/upload/?identifier=ravana-T" target="_blank" rel="noopener noreferrer">ravana-T</a></br>
-21. <a href="https://archive.org/upload/?identifier=ravana-U" target="_blank" rel="noopener noreferrer">ravana-U</a></br>
-22. <a href="https://archive.org/upload/?identifier=ravana-V" target="_blank" rel="noopener noreferrer">ravana-V</a></br>
-23. <a href="https://archive.org/upload/?identifier=ravana-W" target="_blank" rel="noopener noreferrer">ravana-W</a></br>
-24. <a href="https://archive.org/upload/?identifier=ravana-X" target="_blank" rel="noopener noreferrer">ravana-X</a></br>
-25. <a href="https://archive.org/upload/?identifier=ravana-Y" target="_blank" rel="noopener noreferrer">ravana-Y</a></br>
-26. <a href="https://archive.org/upload/?identifier=ravana-Z" target="_blank" rel="noopener noreferrer">ravana-Z</a>
+<button><a href="https://archive.org/upload/?identifier=ravana-A" target="_blank" rel="noopener noreferrer">ravana-A</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-B" target="_blank" rel="noopener noreferrer">ravana-B</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-C" target="_blank" rel="noopener noreferrer">ravana-C</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-D" target="_blank" rel="noopener noreferrer">ravana-D</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-E" target="_blank" rel="noopener noreferrer">ravana-E</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-F" target="_blank" rel="noopener noreferrer">ravana-F</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-G" target="_blank" rel="noopener noreferrer">ravana-G</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-H" target="_blank" rel="noopener noreferrer">ravana-H</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-I" target="_blank" rel="noopener noreferrer">ravana-I</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-J" target="_blank" rel="noopener noreferrer">ravana-J</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-K" target="_blank" rel="noopener noreferrer">ravana-K</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-L" target="_blank" rel="noopener noreferrer">ravana-L</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-M" target="_blank" rel="noopener noreferrer">ravana-M</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-N" target="_blank" rel="noopener noreferrer">ravana-N</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-O" target="_blank" rel="noopener noreferrer">ravana-O</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-P" target="_blank" rel="noopener noreferrer">ravana-P</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-Q" target="_blank" rel="noopener noreferrer">ravana-Q</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-R" target="_blank" rel="noopener noreferrer">ravana-R</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-S" target="_blank" rel="noopener noreferrer">ravana-S</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-T" target="_blank" rel="noopener noreferrer">ravana-T</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-U" target="_blank" rel="noopener noreferrer">ravana-U</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-V" target="_blank" rel="noopener noreferrer">ravana-V</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-W" target="_blank" rel="noopener noreferrer">ravana-W</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-X" target="_blank" rel="noopener noreferrer">ravana-X</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-Y" target="_blank" rel="noopener noreferrer">ravana-Y</a></button><br>
+<button><a href="https://archive.org/upload/?identifier=ravana-Z" target="_blank" rel="noopener noreferrer">ravana-Z</a></button><br>
 
-<a href="https://archive.org/edit.php?edit-files=1&identifier=ravana-A" target="_blank" rel="noopener noreferrer">Special</a>
+<button><a href="https://archive.org/edit.php?edit-files=1&identifier=ravana-A" target="_blank" rel="noopener noreferrer">Special</a></button>
 
 </body>
 </html>
-
